[tool.poetry]
name = "thumbnail_platform"
version = "0.1.0"
description = "A Streamlit app for selecting the best thumbnail for videos based on keywords."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.25.0"
fiftyone = "^0.21.5"
pandas = "^1.5.0"
SQLAlchemy = "^2.0.0"
requests = "^2.28.1"
boto3 = "^1.24.28"
bcrypt = "^4.0.1
opencv-python"  # or passlib for password hashing

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


